[tool.poetry]
name = "dbgear"
version = "0.10.4"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
readme = "README.md"
homepage = "https://github.com/tamuto/dbgear"
repository = "https://github.com/tamuto/dbgear"

packages =[
    { include="dbgear", from="." }
]

[tool.poetry.scripts]
dbgear = "dbgear.main:execute"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
sqlalchemy = "^2.0.20"
pymysql = "^1.1.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
